Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-13381

[C++] ArrayFromJSON doesn't work for float value dictionary type

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • 5.0.0
    • C++

    Description

      The following code returns a NotImplemented error. It works without a problem for int/ string type values.

      auto arr = ArrayFromJSON(dictionary(int32(), float32()), "[1, 1000]");
      
      
      // output 
      -- Arrow Fatal Error --
      NotImplemented: JSON conversion to dictionary<values=float, indices=int32, ordered=0> not implemented
      Process finished with exit code 134 (interrupted by signal 6: SIGABRT)
      

      Attachments

        Issue Links

          Activity

            People

              edponce Eduardo Ponce
              niranda Niranda Perera
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 2h 50m
                  2h 50m