ARROW-13381: [C++] ArrayFromJSON doesn't work for float value dictionary type

This PR adds float/double cases for dictionary converter.

Closes #10746 from edponce/ARROW-13381-Flight-ArrayFromJSON-doesnt-work-for-flo

Authored-by: Eduardo Ponce <edponce00@gmail.com>
Signed-off-by: David Li <li.davidm96@gmail.com>